test/test_11710503_9.out
Error type 5 at Line 10: unmatching type on both sides of assignment
